# crypto-crawler-rs

./: .gitignore
crypto-contract-value/: Cargo.toml
crypto-crawler/: Cargo.toml
crypto-markets/: Cargo.toml
crypto-message/: Cargo.toml
crypto-msg-parser/: Cargo.toml
crypto-msg-parser/src/: lib.rs
crypto-msg-parser/src/exchanges/kraken/: kraken_spot.rs
crypto-msg-parser/src/exchanges/kucoin/: kucoin_spot.rs  message.rs  mod.rs
crypto-msg-parser/tests/: bitfinex.rs  kucoin.rs
crypto-pair/: Cargo.toml
crypto-rest-client/: Cargo.toml
crypto-rest-client/tests/: zbg.rs
