[package]
name = "crypto-contract-value"
version = "1.5.1"
authors = ["soulmachine <soulmachine@gmail.com>"]
edition = "2021"
description   = "Get contract value."
license = "Apache-2.0"
repository = "https://github.com/crypto-crawler/crypto-crawler-rs/tree/main/crypto-contract-value"
keywords = ["cryptocurrency", "blockchain", "trading"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-pair = { path = "../crypto-pair" }
once_cell = "1.13.0"
reqwest = { version = "0.11.11", features = ["blocking", "gzip"] }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"

[dependencies.crypto-market-type]
version = "=1.1.1"
git = "https://github.com/wmjtyd/crypto-crawler-rs"
rev = "92aee0d37e228e53dd994a17058a7f819e005446"