[package]
name = "crypto-markets"
version = "1.3.2"
authors = ["soulmachine <soulmachine@gmail.com>"]
edition = "2021"
description   = "Fetch trading markets from a cryptocurrency exchange"
license = "Apache-2.0"
repository = "https://github.com/crypto-crawler/crypto-crawler-rs/tree/main/crypto-markets"
keywords = ["cryptocurrency", "blockchain", "trading"]

[dependencies]
chrono = "0.4.19"
crypto-pair = { path = "../crypto-pair" }
reqwest = { version = "0.11.11", features = ["blocking", "gzip", "socks"] }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"


[dependencies.crypto-market-type]
version = "=1.1.1"
git = "https://github.com/wmjtyd/crypto-crawler-rs"
rev = "9c7cda9ab90c900c014566f9d279bef822cc37f1"

[dev_dependencies]
crypto-contract-value = { path = "../crypto-contract-value" } 
test-case = "1"
