[package]
name = "crypto-msg-parser"
version = "2.6.2"
authors = ["soulmachine <soulmachine@gmail.com>"]
edition = "2021"
description = "Parse websocket messages from cryptocurreny exchanges"
license = "Apache-2.0"
repository = "https://github.com/wmjtyd/crypto-crawler-rs/tree/main/crypto-msg-parser"
keywords = ["cryptocurrency", "blockchain", "trading"]

[dependencies]
chrono = "0.4.19"
crypto-contract-value = { path = "../crypto-contract-value" }
crypto-msg-type = { path = "../crypto-msg-type" }
crypto-pair = { path = "../crypto-pair" }
if_chain = "1.0.2"
once_cell = "1.13.0"
reqwest = { version = "0.11.11", features = ["blocking", "gzip"] }
simple-error = "0.2.3"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
strum = "0.24.1"
strum_macros = "0.24.2"

[dependencies.crypto-message]
version = "=1.0.2"
git = "https://github.com/wmjtyd/crypto-crawler-rs"
rev = "92aee0d37e228e53dd994a17058a7f819e005446"

[dependencies.crypto-market-type]
version = "=1.1.1"
git = "https://github.com/wmjtyd/crypto-crawler-rs"
rev = "92aee0d37e228e53dd994a17058a7f819e005446"