[package]
name = "crypto-msg-parser"
version = "2.6.2"
authors = ["soulmachine <soulmachine@gmail.com>"]
edition = "2021"
description = "Parse websocket messages from cryptocurreny exchanges"
license = "Apache-2.0"
repository = "https://github.com/wmjtyd/crypto-crawler-rs/tree/main/crypto-msg-parser"
keywords = ["cryptocurrency", "blockchain", "trading"]

[dependencies]
chrono = "0.4.19"
crypto-contract-value = { path = "../crypto-contract-value" }
crypto-pair = { path = "../crypto-pair" }
if_chain = "1.0.2"
once_cell = "1.13.0"
reqwest = { version = "0.11.11", features = ["blocking", "gzip"] }
simple-error = "0.2.3"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
strum = "0.24.1"
strum_macros = "0.24.2"

[dependencies.crypto-message]
version = "=1.0.2"
git = "https://github.com/wmjtyd/crypto-crawler-rs"
rev = "8914b2855b87397f82a14507a20a2094c1ab7891"

[dependencies.crypto-market-type]
version = "=1.1.1"
git = "https://github.com/wmjtyd/crypto-crawler-rs"
rev = "9c7cda9ab90c900c014566f9d279bef822cc37f1"

[dependencies.crypto-msg-type]
git = "https://github.com/wmjtyd/crypto-crawler-rs"
rev = "9c7cda9ab90c900c014566f9d279bef822cc37f1"